# extensions

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  TODO.md  package-lock.json  package.json
.circleci/: config.yml
crates/dx-browser-native-host/: Cargo.toml
crates/dx-browser-native-host/src/: command.rs  framing.rs  host.rs  lib.rs  main.rs  protocol.rs
crates/dx-browser-native-host/tests/: native_host_protocol.rs
crates/dx-extension-manifest/: Cargo.toml
crates/dx-extension-manifest/src/: lib.rs  manifest.rs  registry.rs  validation.rs
docs/: affinity-content-addon-starter.md  browser-extension.md  canva-app-starter.md  command-policy.md  davinci-resolve-scripting-starter.md  extension-architecture.md  figma-plugin-starter.md  google-workspace-addon-starter.md  indesign-uxp-plugin-starter.md  intellij-platform-plugin-starter.md  office-excel-addin-starter.md  office-powerpoint-addin-starter.md  office-word-addin-starter.md  official-extension-starter.md  photoshop-uxp-plugin-starter.md  premiere-pro-uxp-plugin-starter.md  professional-host-targets.md  sketch-plugin-starter.md  unity-editor-plugin-starter.md  unreal-engine-plugin-starter.md  visual-studio-sdk-plugin-starter.md  zed-extension-starter.md
registry/: extension-readiness.toml  official-extensions.toml  professional-host-targets.toml  release-evidence-gates.toml
schemas/: dx.extension.manifest.schema.json
scripts/: build-adobe-ccx-package-proofs.ts  build-adobe-ccx-release-checksum-proofs.ts  build-adobe-uxp-j1.ps1  build-adobe-uxp-package.ts  build-affinity-content-package.ts  (+148 more)
(+421 files in other folders)
