[package]
name = "dx-browser-native-host"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Native messaging host for the official DX browser extension."

[[bin]]
name = "dx-browser-native-host"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
