[package]
name = "dx-extension-manifest"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Typed manifest contract for official DX host extensions."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
